force-app/main/default/objects/ssot__HealthcareProviderService__dlm/fields/ssot__HealthcareProviderObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__HealthcareProviderObject__c</fullName>
    <label>Healthcare Provider Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>HealthcareProviderObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>