force-app/main/default/objects/ssot__HealthcareProviderService__dlm/fields/ssot__rel_1742275554512_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1742275554512_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HealthcareProviderService_Healthcare_rel</label>
    <referenceTo>ssot__HealthcareService__dlm</referenceTo>
    <relationshipLabel>HealthcareProviderService_Healthcare_rel</relationshipLabel>
    <relationshipName>rel_1742275554512_end</relationshipName>
    <type>Lookup</type>
</CustomField>