force-app/main/default/objects/ssot__HealthcareProviderService__dlm/fields/ssot__ServiceEffectiveToDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ServiceEffectiveToDate__c</fullName>
    <label>Service Effective To Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ServiceEffectiveToDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>